Dodaj element h1 do index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mój sklep internetowy</title>
 </head>
+
 <body>
     
+    <h1>Grosza daj Wiedźminowi</h1>
+
 </body>
 </html>
