--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
-    
+
     <h1>Grosza daj Wiedźminowi</h1>
 
+    <footer>
+        <p> Projekt Sebastian 61835</p>
+    </footer>
 </body>
 </html>
