--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     body{
         background-color: blueviolet;
     }
+    footer{
+        background-color: beige;
+        font-size: 20;
+    }
     </style>
 
 </head>
