--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
 
     <h1>Grosza daj Wiedźminowi</h1>
+	<p> Sakiewką potrząśnij ...</p>
 
     <footer>
         <p> Projekt Sebastian 61835</p>
