--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mój sklep internetowy</title>
 <style>
     body{
-        background-color: blueviolet;
+        background-color: rgb(78, 157, 231);
     }
     footer{
         background-color: beige;
