Dodaj sekcje MiddleEarth

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <h1>Grosza daj Wiedźminowi</h1>
 	<p> Sakiewką potrząśnij ...</p>
 
+    <section class="MiddleEarth">
+        <h2>Middle Earth</h2>    
+    </section>>
+
     <footer>
         <p> Projekt Sebastian 61835</p>
     </footer>
