Zmien H2 na branchu main

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<p> Sakiewką potrząśnij ...</p>
 
     <section class="MiddleEarth">
-        <h2>Middle Earth</h2>    
+        <h2>Middle Earth - Pierwsza kraina</h2>    
     </section>>
 
     <footer>
