dodaj sekcje Nilfheim

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
     <section class="MiddleEarth">
         <h2>Tydzien I - Skellige</h2>    
-    </section>>
+    </section>
+
+    <section class ="Nilfheim">
+        <h2>Nilfheim</h2>
+    </section>
 
     <footer>
         <p> Projekt Sebastian 61835</p>
