Zmien H2 na branchu main

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section class ="Nilfheim">
-        <h2>Nilfheim</h2>
+        <h2>Nilfheim asdkjlasdlkjjaksd </h2>
     </section>
 
     <footer>
