zmien sekcje middlearth

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <section class="MiddleEarth">
         <h2>Tydzien I - Skellige</h2>    
+        <img src="https://media.istockphoto.com/photos/landscape-new-zealand-the-place-in-middleearth-picture-id1125876722?k=20&m=1125876722&s=612x612&w=0&h=rusCa8FhDq_MULCkGKGhQ6uA3u5vjHiLpTzurydDlMs=" alt="middleearth">
     </section>
 
     <section class ="Nilfheim">
