dodaj img do sekcji nilfheim

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <section class ="Nilfheim">
 
         <h2>Tydzien II - Nilfheim</h2>
+        <img src="https://media.istockphoto.com/photos/glacial-lake-louise-red-canoes-picture-id1204440758?k=20&m=1204440758&s=612x612&w=0&h=JrgDDFMIB_kIMXBfKeS3At5E29cNMv-Up0vJ55kHoG0=" alt="nilfheim">
       
     </section>
 
