dodaj artykuly do sekcji

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <section class="MiddleEarth">
         <h2>Tydzien I - Skellige</h2>    
         <img src="https://media.istockphoto.com/photos/landscape-new-zealand-the-place-in-middleearth-picture-id1125876722?k=20&m=1125876722&s=612x612&w=0&h=rusCa8FhDq_MULCkGKGhQ6uA3u5vjHiLpTzurydDlMs=" alt="middleearth">
+    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sint, cum distinctio architecto officiis beatae enim earum at dolores, provident quas aspernatur consequatur illo dignissimos, similique voluptatem aperiam corrupti optio.</article>
     </section>
 
     <section class ="Nilfheim">
 
         <h2>Tydzien II - Nilfheim</h2>
         <img src="https://media.istockphoto.com/photos/glacial-lake-louise-red-canoes-picture-id1204440758?k=20&m=1204440758&s=612x612&w=0&h=JrgDDFMIB_kIMXBfKeS3At5E29cNMv-Up0vJ55kHoG0=" alt="nilfheim">
-      
+        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, quam. Laboriosam ullam eaque quia laborum nostrum magni maxime, temporibus neque incidunt iusto recusandae eveniet tempora, laudantium perspiciatis libero reprehenderit consequuntur.</article>
     </section>
 
     <footer>
